--- a/html/adminmenu.html
+++ b/html/adminmenu.html
@@ -18,11 +18,11 @@
     <h2 class="administrador">ADMINISTRADOR</h2>
 
     <div class="foco">
-        <img src="image/foco.PNG" alt="div" WIDTH="20" height="30">
+        <img src="/image/foco.PNG" alt="div" WIDTH="20" height="30">
     </div>
 
     <div class="dropdown">
-        <button><img src="image/menu.PNG" alt="div" width="50" height="50"> </button>
+        <button><img src="/image/menu.PNG" alt="div" width="50" height="50"> </button>
         <div class="dropdown-content">
             <a href="#">Mis datos</a>
             <a href="#">Cambiar Contraseña</a>
@@ -75,27 +75,27 @@
 
 
         <div class="o1">
-        <img src="image/org.PNG" alt="div" width="100" height="8">
+        <img src="/image/org.PNG" alt="div" width="100" height="8">
     </div>
 
     <div class="b2">
-        <img src="image/brw.PNG" alt="div" width="100" height="8">
+        <img src="/image/brw.PNG" alt="div" width="100" height="8">
     </div>
 
         <div class="o3">
-        <img src="image/org.PNG" alt="div" width="100" height="8">
+        <img src="/image/org.PNG" alt="div" width="100" height="8">
     </div>
     
     <div class="b4">
-        <img src="image/brw.PNG" alt="div" width="100" height="8">
+        <img src="/image/brw.PNG" alt="div" width="100" height="8">
     </div>
 
         <div class="o5">
-        <img src="image/org.PNG" alt="div" width="100" height="8">
+        <img src="/image/org.PNG" alt="div" width="100" height="8">
     </div>
 
         <div class="b6">
-        <img src="image/brw.PNG" alt="div" width="100" height="8">
+        <img src="/image/brw.PNG" alt="div" width="100" height="8">
     </div>
     </div>
     
