--- a/html/ciudad_uc.html
+++ b/html/ciudad_uc.html
@@ -153,7 +153,7 @@
     <div class="fila">
 
         <div class="columna">
-            <a href="/Agenda_U.html">
+            <a href="/html/agenda_uc.html">
                 <i class="fa-solid fa-calendar-days  fa-beat"
                     style="--fa-animation-duration: 5s; --fa-beat-scale: 1.2; font-size: 100px;"></i>
             </a>
@@ -177,7 +177,7 @@
         </div>
 
         <div class="columna">
-            <a href="/Actividaes_U.html">
+            <a href="/html/actividaes_u.html">
                 <i class="fa-solid fa-icons fa-beat"
                     style="--fa-animation-duration: 5s; --fa-beat-scale: 1.2; font-size: 100px;"></i>
             </a>
