--- a/html/est-com login.html
+++ b/html/est-com login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="/css/barranav.css">
-  <link rel="stylesheet" href="/css/Est-Com Login.css">
+  <link rel="stylesheet" href="/css/est-com login.css">
   <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
 </head>
 <header>
