--- a/html/mercado_u.html
+++ b/html/mercado_u.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="/css/Mercado_U.css">
+  <link rel="stylesheet" href="/css/mercado_u.css">
   <link rel="stylesheet" href="/css/barranav.css">
   <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
 </head>
@@ -12,24 +12,24 @@
   <div class="barra_inicio">
       <nav>
           <div class="logo">
-          <img width='80' height='70' src='./image/LogoCU.png'>
-          <img width='200' height='70' src='./image/logo2.PNG'>
+          <img width='80' height='70' src='/image/LogoCU.png'>
+          <img width='200' height='70' src='/image/logo2.png'>
       </div>
           <ul>
 
-       <li><a href="/Home.html">Inicio</a></li>
+       <li><a href="/html/home.html">Inicio</a></li>
 
        <li><a href=""></a>Nosotros</li>
 
-       <li><a href="/Beneficios.html">Beneficios</a></li>
+       <li><a href="/html/beneficios_uc.html"></a></li>
 
-       <li><a href="/Mercado_U.html">Adheri tu Comercio<hr></a></li>
+       <li><a href="/html/mercado_u.html">Adheri tu Comercio<hr></a></li>
 
-       <li><a href="#"></a>Ùnite</li>
+       <li><a href="/html/registrate.html"></a>Ùnite</li>
        
           </ul>
           <div class="botonesIR">
-            <button><a href="/Est-Com Login.html"><b> Iniciar Sesion</a></button>
+            <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
              <button><a href="#"></a>Registro</b></button>
            </div>
       </nav>
@@ -40,7 +40,7 @@
 
   <div class="ContenidoAlineado">
 
-    <img class="Tienda" src="./image/unnamed.png">
+    <img class="Tienda" src="/image/unnamed.png">
 
     <div class="Linea">
 
@@ -56,7 +56,7 @@
         class="Ctext">institución </span> sea
       parte de Ciudad U!</h2>
     <div class="Tienda2">
-      <img width="530" height="400" src="./image/tienda2.png">
+      <img width="530" height="400" src="/image/tienda2.png">
     </div>
   </div>
 
