--- a/html/beneficios_uc.html
+++ b/html/beneficios_uc.html
@@ -13,29 +13,29 @@
   <header>
 
   <div class="barra_inicio">
-      <nav>
-          <div class="logo">
-          <img width='80' height='70' src='/image/LogoCU.png'>
-          <img width='200' height='70' src='/image/logo2.PNG'>
+    <nav>
+      <div class="logo">
+        <img width='80' height='70' src='/image/LogoCU.png'>
+        <img width='200' height='70' src='/image/logo2.png'>
       </div>
-          <ul>
+      <ul>
 
-       <li><a href="/html/home.html">Inicio</a></li>
+        <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio</a></li>
 
-       <li><a href="/html/beneficios_uc.html"></a>Nosotros</li>
+        <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
 
-       <li><a href="#"></a>Beneficios<hr></li>
+        <li><a href="/html/beneficios_uc.html">Beneficios<hr></a></li>
 
-       <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
+        <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
 
-       <li><a href="#"></a>Ùnite</li>
-       
-          </ul>
-          <div class="botonesIR">
-            <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
-             <button><a href="#">Registro</b></a></button>
-           </div>
-      </nav>
+        <li><a href="/html/registro.html">Ùnite</a></li>
+
+      </ul>
+      <div class="botonesIR">
+        <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
+        <button><a href="/html/registro.html">Registro</b></a></button>
+      </div>
+    </nav>
 
     </header>
 </div>
