--- a/html/comercio.html
+++ b/html/comercio.html
@@ -14,26 +14,24 @@
     <nav>
       <div class="logo">
         <img width='80' height='70' src='/image/LogoCU.png'>
-        <img width='200' height='70' src='/image/logo2.PNG'>
+        <img width='200' height='70' src='/image/logo2.png'>
       </div>
       <ul>
 
-        <li><a href="/html/home.html">Inicio</a></li>
+        <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio</a></li>
 
-        <li><a href=""></a>Nosotros</li>
+        <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
 
         <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
 
-        <li><a href="/html/comercio.html">Adheri tu Comercio
-            <hr>
-          </a></li>
+        <li><a href="/html/comercio.html">Adheri tu Comercio<hr></a></li>
 
-        <li><a href="#"></a>Ùnite</li>
+        <li><a href="/html/registro.html">Ùnite</a></li>
 
       </ul>
       <div class="botonesIR">
         <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
-        <button><a href="#"></a>Registro</b></button>
+        <button><a href="/html/registro.html">Registro</b></a></button>
       </div>
     </nav>
 </header>
