--- a/html/home.html
+++ b/html/home.html
@@ -30,12 +30,12 @@
 
           <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
 
-          <li><a href="#"></a>Ùnite</li>
+          <li><a href="/html/registro.html">Ùnite</a></li>
 
         </ul>
         <div class="botonesIR">
           <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
-          <button><a href="#">Registro</b></a></button>
+          <button><a href="/html/registro.html">Registro</b></a></button>
         </div>
       </nav>
 
