--- a/html/nosotros_uc.html
+++ b/html/nosotros_uc.html
@@ -6,14 +6,36 @@
 
     <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
     <script src="FuncionTarjetas.js"></script>
-    <link rel="stylesheet" href="/css/Tarjetas.css" .css">
+    <link rel="stylesheet" href="/css/Tarjetas.css">
     <link rel="stylesheet" href="/css/ciudad_uc.css">
-
+  <link rel="stylesheet" href="/css/barranav-alter.css">
 </head>
 <header>
 
     <title> Nosotros </title>
+    <nav>
+        <div class="logo">
+          <img width='80' height='70' src='/image/LogoCU.png'>
+          <img width='200' height='70' src='/image/logo2.png'>
+        </div>
+        <ul>
 
+          <li><a href="/html/home.html" >Inicio</a></li>
+
+          <li><a href="/html/nosotros_uc.html" style="display: block; width: 100%;">Nosotros<hr></a></li>
+
+          <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
+
+          <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
+
+          <li><a href="/html/registro.html">Ùnite</a></li>
+
+        </ul>
+        <div class="botonesIR">
+          <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
+          <button><a href="/html/registro.html">Registro</b></a></button>
+        </div>
+      </nav>
 </header>
 
 <body style="background-color: #FFFFFF;">
