--- a/html/registrate.html
+++ b/html/registrate.html
@@ -3,7 +3,31 @@
 <head>
     <title>Forma parte de Ciudad U!</title>
     <link rel="stylesheet" href="/css/registratestyle.css">
-   
+    <link rel="stylesheet" href="/css/barranav.css">
+   <header> <nav>
+    <div class="logo">
+      <img width='80' height='70' src='/image/LogoCU.png'>
+      <img width='200' height='70' src='/image/logo2.png'>
+    </div>
+    <ul>
+
+      <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio<hr></a></li>
+
+      <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
+
+      <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
+
+      <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
+
+      <li><a href="#"></a>Ùnite</li>
+
+    </ul>
+    <div class="botonesIR">
+      <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
+      <button><a href="#">Registro</b></a></button>
+    </div>
+  </nav>
+</header>
 </head>
 <body>
     <div class="centered-image">
