--- a/html/usuario_estudiante_uc.html
+++ b/html/usuario_estudiante_uc.html
@@ -10,7 +10,32 @@
     <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/usuario_estudiante.css">
     <script src="/js/menu_cu.js"></script>
+    <link rel="stylesheet" href="/css/barranav.css">
+<header>
+    <nav>
+        <div class="logo">
+          <img width='80' height='70' src='/image/LogoCU.png'>
+          <img width='200' height='70' src='/image/logo2.png'>
+        </div>
+        <ul>
 
+          <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio</a></li>
+
+          <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
+
+          <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
+
+          <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
+
+          <li><a href="/html/registro.html">Ùnite</a></li>
+
+        </ul>
+        <div class="botonesIR">
+          <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
+          <button><a href="/html/registro.html">Registro</b></a></button>
+        </div>
+      </nav>
+</header>
 </head>
 
 <body style="background-color: #F5F5F5;">
