--- a/html/revista.html
+++ b/html/revista.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revista</title>
-    <link rel="stylesheet" href="revista.css">
-    <script src="revista.js"></script>
+    <link rel="stylesheet" href="/css/revista.css">
+    <script src="/js/revista.js"></script>
 </head>
 
 <body>
 
     <div class="centered-image">
-        <img src="img/title.PNG" alt="imagen centrada" width="409" height="245">
+        <img src="/image/title.PNG" alt="imagen centrada" width="409" height="245">
     </div>
 
     <!-- PHOTO SLIDER -->
@@ -21,13 +21,13 @@
 
         <ul class="slider">
             <li id="slide1">
-                <img src="img/img1.PNG" alt="Slide 1">
+                <img src="/image/img1.PNG" alt="Slide 1">
             </li>
             <li id="slide2">
-                <img src="img/img2.jpg" alt="Slide 2">
+                <img src="/image/img2.jpg" alt="Slide 2">
             </li>
             <li id="slide3">
-                <img src="img/img3.png" alt="Slide 3">
+                <img src="/image/img3.png" alt="Slide 3">
             </li>
         </ul>
 
@@ -52,10 +52,10 @@
     <div class="entretenimiento"> Entretenimiento</div>
 
     <div class="lineuno">
-        <img src="img/blue.PNG" alt="div" WIDTH="130" HEIGHT="6">
+        <img src="/image/blue.PNG" alt="div" WIDTH="130" HEIGHT="6">
     </div>
     <div class="linedos">
-        <img src="img/blue.PNG" alt="div" WIDTH="275" HEIGHT="6">
+        <img src="/image/blue.PNG" alt="div" WIDTH="275" HEIGHT="6">
     </div>
     
 </body>
