--- a/html/nosotros_uc.html
+++ b/html/nosotros_uc.html
@@ -6,7 +6,7 @@
 
     <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
     <script src="FuncionTarjetas.js"></script>
-    <link rel="stylesheet" href="/css/Tarjetas.css" .css">
+    <link rel="stylesheet" href="/css/Tarjetas.css">
     <link rel="stylesheet" href="/css/ciudad_uc.css">
 
 </head>
