Arreglo de pagina de registro

--- a/html/usuario_comerciante.html
+++ b/html/usuario_comerciante.html
@@ -109,13 +109,9 @@
         </form>
     </div>
 
-    <div class="Terminos">
-
-        <ul>
-            <input type="checkbox" id="condiciones" name="terminos_condiciones" />
-            <label for="condiciones">Acepto terminos y condiciones</label>
-        </ul>
-
+    <div class="container">
+        <input type="checkbox" id="terms" class="checkbox-input">
+        <label for="terms" class="checkbox-label">Acepto términos y condiciones</label>
     </div>
 
     <button class="Boton" type="submit">Enviar </button>
