--- a/html/agenda_uc.html
+++ b/html/agenda_uc.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/css/Agenda_U.css">
+        <link rel="stylesheet" href="/css/agenda_uc.css">
         <link rel="stylesheet" href="/css/barranav-alter.css">
         <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
       </head>
@@ -11,8 +11,8 @@
         <header>
           <nav>
             <div class="logo">
-              <img width='80' height='70' src='./image/LogoCU.png'>
-              <img width='200' height='70' src='./image/logo2.PNG'>
+              <img width='80' height='70' src='/image/LogoCU.png'>
+              <img width='200' height='70' src='/image/logo2.PNG'>
             </div>
             <ul>
     
