--- a/html/home.html
+++ b/html/home.html
@@ -30,7 +30,7 @@
 
           <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
 
-          <li><a href="#"></a>Ùnite</li>
+          <li><a href="/html/registro.html">Ùnite</a></li>
 
         </ul>
         <div class="botonesIR">
@@ -72,7 +72,7 @@
 
           <li>Cursos de Inovación y Tecnología</li>
 
-          <button><a href="#"></a>Unirse Ahora </button>
+          <button><a href="/html/registro.html">Unirse Ahora </a></button>
         </h2>
       </div>
     </ul>
