--- a/html/agenda_uc.html
+++ b/html/agenda_uc.html
@@ -12,7 +12,7 @@
           <nav>
             <div class="logo">
               <img width='80' height='70' src='/image/LogoCU.png'>
-              <img width='200' height='70' src='/image/logo2.PNG'>
+              <img width='200' height='70' src='/image/logo2.png'>
             </div>
             <ul>
     
