--- a/html/registro.html
+++ b/html/registro.html
@@ -64,26 +64,25 @@
     <div class="univer_text">Certificado de <br> alumno regular</div>
 
     <!--Formulario-->
-    <h1 class="registrate"> <span style="color: #2B99A5;">REGISTRATE</span></h1>
 
+    <h1 class="registrate">REGISTRATE</h1>
 
-    <form >
-<div class="cuestionario">
-        <div class="form-group">
-                <label for="nombre" ;">Nombre</label>
+    <form>
+        <div class="cuestionario">
+            <div class="form-group">
+                <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre">
-                  
+
             </div>
 
             <div class="form-group">
-                <label for="apellido">Apellido</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 943px; margin: 10px; position: absolute">
+                <label for="apellido">Apellido:</label>
+                <input type="text" id="apellido" name="apellido">
             </div>
 
             <div class="form-group">
                 <label for="sexo">Sexo:</label>
-                <select id="sexo" name="sexo" style="border-radius: 10px; padding:10px; width: 967px;margin: 10px;">
+                <select id="sexo" name="sexo">
                     <option value="femenino">Femenino</option>
                     <option value="masculino">Masculino</option>
                     <option value="otro">Otro</option>
@@ -91,32 +90,28 @@
             </div>
 
             <div class="form-group">
-                <label for="apellido">Mail:</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 943px;margin: 10px;">
+                <label for="apellido">Correo:</label>
+                <input type="text" id="apellido" name="apellido">
             </div>
 
             <div class="form-group">
-                <label for="apellido">Fecha_de_nacimiento:</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 943px;margin: 10px;">
+                <label for="apellido">Fecha de nacimiento:</label>
+                <input type="text" id="apellido" name="apellido">
             </div>
 
             <div class="form-group">
                 <label for="apellido">Telefono:</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 943px;margin: 10px;">
+                <input type="text" id="apellido" name="apellido">
             </div>
 
             <div class="form-group">
                 <label for="apellido">Ciudad:</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 943px;margin: 10px;">
+                <input type="text" id="apellido" name="apellido">
             </div>
 
             <div class="form-group">
                 <label for="apellido">Universidad:</label>
-                <select id="sexo" name="sexo" style="border-radius: 10px; padding:10px; width: 967px;margin: 10px;">
+                <select id="sexo" name="sexo">
                     <option value="femenino">Pre</option>
                     <option value="masculino">Uncuyo</option>
                     <option value="otro">Uch</option>
@@ -131,25 +126,21 @@
 
             <div class="form-group">
                 <label for="apellido">DNI/Pasaporte:</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 943px;margin: 10px;">
+                <input type="text" id="apellido" name="apellido">
             </div>
 
             <div class="form-group">
                 <label for="apellido">Constancia:</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 800px;margin: 10px;">
+                <input type="text" id="apellido" name="apellido" style="width: 90%;">
             </div>
 
             <!--ADJUNTAR PDF CONSTANCIA-->
 
             <div>
-                <label for="file-upload" class="file-label"
-                    style="border: 0px solid #2D9AA6; border-radius: 10px; padding:10px; width: 60px; display: flex; align-items: center;margin: 10px;">
-                    <img src="/image/pdf.PNG" alt="Adjuntar icono"
-                        style="width: 50px; height: 60px; margin-right: 10px;">
+                <label for="file-upload" class="file-label">
+                    <img class="imgC" src="/image/pdf.PNG" alt="Adjuntar icono">
                 </label>
-                <input type="file" id="file-upload" name="constancia" accept=".pdf" style="display: none;"
+                <input type="file" id="file-upload" style="display: none;" name="constancia" accept=".pdf"
                     onchange="displayFileName()" />
             </div>
 
@@ -159,14 +150,12 @@
 
             <div class="form-group">
                 <label for="apellido">Nombre_usuario:</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 943px;margin: 10px;">
+                <input type="text" id="apellido" name="apellido">
             </div>
 
             <div class="form-group">
                 <label for="apellido">Contraseña:</label>
-                <input type="text" id="apellido" name="apellido"
-                    style="border-radius: 10px; padding:10px; width: 943px;margin: 10px;">
+                <input type="text" id="apellido" name="apellido">
             </div>
         </div>
     </form>
@@ -176,8 +165,9 @@
         <label for="terms" class="checkbox-label">Acepto términos y condiciones</label>
     </div>
 
-    <button class="boton-enviar">Enviar</button>
+    <button class="Boton" type="submit">Enviar </button>
 
 </body>
+
 
 </html>
