css nav y registro

--- a/html/actividaes_uc.html
+++ b/html/actividaes_uc.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/css/Actividades_U.css">
+        <link rel="stylesheet" href="/css/actividades_uc.css">
         <link rel="stylesheet" href="/css/barranav-alter.css">
         <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
       </head>
@@ -48,7 +48,7 @@
 
         </div>
 
-        <img class="Icono" src="image/fotoActividaes1.png">
+        <img class="Icono" src="/image/fotoActividaes1.png">
 
     </div>
 
