--- a/html/usuario_comerciante.html
+++ b/html/usuario_comerciante.html
@@ -8,31 +8,8 @@
     <link rel="stylesheet" href="/css/usuario_comerciante.css">
     <script src="/js/menu_cu.js"></script>
     <script src="/js/funcion_cargar_archivo.js"></script>
-    <link rel="stylesheet" href="/css/barranav.css">
 <header>
-    <nav>
-        <div class="logo">
-          <img width='80' height='70' src='/image/LogoCU.png'>
-          <img width='200' height='70' src='/image/logo2.png'>
-        </div>
-        <ul>
-
-          <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio</a></li>
-
-          <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
-
-          <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
-
-          <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
-
-          <li><a href="/html/registro.html">Ùnite</a></li>
-
-        </ul>
-        <div class="botonesIR">
-          <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
-          <button><a href="/html/registro.html">Registro</b></a></button>
-        </div>
-      </nav>
+ 
 </header>
 </head>
 
@@ -42,9 +19,9 @@
         <div class="contenedor">
             <img class="imagen" src="/image/menu.svg" onclick="mostrarLista()">
             <ul class="lista" id="miLista">
-                <li>Mis datos</li>
-                <li>Cambiar Contraseña</li>
-                <li>Salir</li>
+                <li><a href="#">Mis datos</a></li>
+                <li><a href="#">Cambiar Contraseña</a></li>
+                <li><a href="#">Salir🥺</a></li>
             </ul>
         </div>
     </header>
