--- a/html/actividaes_u.html
+++ b/html/actividaes_u.html
@@ -59,14 +59,15 @@
 
 
     <!-- Buscador -->
-    
-    <div class="Buscador">
-        <input class="MiInput" type="text" placeholder="Buscar según tema/carrera/universidad">
+
+   <div class="Buscador">
+        <input type="text" placeholder="Buscar según tema/carrera/universidad">
         <button class="BotonUni">
-            <img src="tu_imagen_plegable.jpg" alt="Buscar Uni">
+            <img src="/image/menu.svg" alt="Buscar Uni">
             Buscar Uni
         </button>
     </div>
+
 
     <!-- /Buscador -->
 
