--- a/html/comercio.html
+++ b/html/comercio.html
@@ -57,7 +57,7 @@
         class="Ctext">institución </span> sea
       parte de Ciudad U!</h2>
     <div class="Tienda2">
-      <img width="530" height="400" src="/image/tienda2.png">
+      <img width="450" height="400" src="/image/tiendacolor.png">
     </div>
   </div>
 
