--- a/html/revista.html
+++ b/html/revista.html
@@ -6,40 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revista</title>
-    <link rel="stylesheet" href="revista.css">
+    <link rel="stylesheet" href="/css/revista.css">
     <script src="revista.js"></script>
-    <link rel="stylesheet" href="/css/barranav.css">
-    <header>  
+    <link rel="stylesheet" href="/css/barranav-alter.css">
+
+    <header>
         <nav>
-        <div class="logo">
-          <img width='80' height='70' src='/image/LogoCU.png'>
-          <img width='200' height='70' src='/image/logo2.png'>
-        </div>
-        <ul>
+            <div class="logo">
+                <img width='80' height='70' src='/image/LogoCU.png'>
+                <img width='200' height='70' src='/image/logo2.png'>
+            </div>
+            <ul>
 
-          <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio</a></li>
+                <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio</a></li>
 
-          <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
+                <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
 
-          <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
+                <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
 
-          <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
+                <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
 
-          <li><a href="/html/registro.html">Ùnite</a></li>
+                <li><a href="/html/registro.html">Ùnite</a></li>
 
-        </ul>
-        <div class="botonesIR">
-          <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
-          <button><a href="/html/registro.html">Registro</b></a></button>
-        </div>
-      </nav>
+            </ul>
+            <div class="botonesIR">
+                <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
+                <button><a href="/html/registro.html">Registro</b></a></button>
+            </div>
+        </nav>
     </header>
 </head>
 
 <body>
 
     <div class="centered-image">
-        <img src="img/title.PNG" alt="imagen centrada" width="409" height="245">
+        <img src="/image/title.png" alt="imagen centrada" width="409" height="245">
     </div>
 
     <!-- PHOTO SLIDER -->
@@ -47,13 +48,13 @@
 
         <ul class="slider">
             <li id="slide1">
-                <img src="img/img1.PNG" alt="Slide 1">
+                <img src="/image/img1.png" alt="Slide 1">
             </li>
             <li id="slide2">
-                <img src="img/img2.jpg" alt="Slide 2">
+                <img src="/image/img2.jpg" alt="Slide 2">
             </li>
             <li id="slide3">
-                <img src="img/img3.png" alt="Slide 3">
+                <img src="/image/img3.png" alt="Slide 3">
             </li>
         </ul>
 
@@ -72,18 +73,16 @@
     </div>
     <!-- /PHOTO SLIDER -->
 
-
-
     <div class="cultura"> Cultura</div>
     <div class="entretenimiento"> Entretenimiento</div>
 
     <div class="lineuno">
-        <img src="img/blue.PNG" alt="div" WIDTH="130" HEIGHT="6">
+        <img src="/image/blue.png" alt="div" WIDTH="130" HEIGHT="6">
     </div>
     <div class="linedos">
-        <img src="img/blue.PNG" alt="div" WIDTH="275" HEIGHT="6">
+        <img src="/image/blue.png" alt="div" WIDTH="275" HEIGHT="6">
     </div>
-    
+
 </body>
 
 </html>
