--- a/html/actividaes_u.html
+++ b/html/actividaes_u.html
@@ -61,7 +61,7 @@
     <!-- Buscador -->
 
    <div class="Buscador">
-        <input type="text" placeholder="Buscar según tema/carrera/universidad">
+        <input type="text" placeholder="Buscar según tema/carrera/universidad" style="border-radius: 35px; padding:30px; width: 1300px; margin: 10px; position: absolute">
         <button class="BotonUni">
             <img src="/image/menu.svg" alt="Buscar Uni">
             Buscar Uni
