--- a/html/registrate.html
+++ b/html/registrate.html
@@ -4,6 +4,7 @@
 <head>
     <title>Forma parte de Ciudad U!</title>
     <link rel="stylesheet" href="/css/registrate.css">
+    <script></script>
 </head>
 
 <body>
