--- a/html/revista.html
+++ b/html/revista.html
@@ -60,13 +60,13 @@
 
         <ul class="menu">
             <li>
-                <a href="#slide1" class="slide-button" style="position:absolute; top: 530px; right: 1220px;"></a>
+                <a href="#slide1" class="slide-button"></a>
             </li>
             <li>
-                <a href="#slide2" class="slide-button" style="position:absolute; top: 560px; right: 1220px;"></a>
+                <a href="#slide2" class="slide-button2"></a>
             </li>
             <li>
-                <a href="#slide3" class="slide-button" style="position:absolute; top: 590px; right: 1220px;"></a>
+                <a href="#slide3" class="slide-button3"></a>
             </li>
         </ul>
 
