--- a/html/usuario_comerciante.html
+++ b/html/usuario_comerciante.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="/css/usuario_comerciante.css">
     <script src="/js/menu_cu.js"></script>
     <script src="/js/funcion_cargar_archivo.js"></script>
-<header>
- 
-</header>
+    <header>
+
+    </header>
 </head>
 
-<body style="background-color: #F5F5F5;">
+<body style="background-color: white;">
 
     <header>
         <div class="contenedor">
