--- a/html/usuario_estudiante_uc.html
+++ b/html/usuario_estudiante_uc.html
@@ -2,51 +2,49 @@
 <html lang="en">
 
 <head>
-    
+
     <title> Usuario Estudiante </title>
     <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/usuario_estudiante.css">
     <script src="/js/menu_cu.js"></script>
     <link rel="stylesheet" href="/css/barranav.css">
-<header>
-    <nav>
-        <div class="logo">
-          <img width='80' height='70' src='/image/LogoCU.png'>
-          <img width='200' height='70' src='/image/logo2.png'>
-        </div>
-        <ul>
+    <header>
+        <nav>
+            <div class="logo">
+                <img width='80' height='70' src='/image/LogoCU.png'>
+                <img width='200' height='70' src='/image/logo2.png'>
+            </div>
+            <ul>
 
-          <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio</a></li>
+                <li><a href="/html/home.html" style="display: block; width: 100%;">Inicio</a></li>
 
-          <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
+                <li><a href="/html/nosotros_uc.html">Nosotros</a></li>
 
-          <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
+                <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
 
-          <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
+                <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
 
-          <li><a href="/html/registro.html">Ùnite</a></li>
+                <li><a href="/html/registro.html">Ùnite</a></li>
 
-        </ul>
-        <div class="botonesIR">
-          <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
-          <button><a href="/html/registro.html">Registro</b></a></button>
-        </div>
-      </nav>
-</header>
+            </ul>
+            <div class="botonesIR">
+                <button><a href="/html/est-com login.html"><b> Iniciar Sesion</a></button>
+                <button><a href="/html/registro.html">Registro</b></a></button>
+            </div>
+        </nav>
+    </header>
 </head>
 
-<body style="background-color: #F5F5F5;">
+<body style="background-color: white;">
 
-    <header>
-        <div class="contenedor">
-            <img class="imagen" src="/image/menu.svg" onclick="mostrarLista()">
-            <ul class="lista" id="miLista">
-                <li><a href="#">Mis datos</a></li>
-                <li><a href="#">Cambiar Contraseña</a></li>
-                <li><a href="#">Salir🥺</a></li>
-            </ul>
-        </div>
-    </header>
+    <div class="contenedor">
+        <img class="imagen" src="/image/menu.svg" onclick="mostrarLista()">
+        <ul class="lista" id="miLista">
+            <li><a href="#">Mis datos</a></li>
+            <li><a href="#">Cambiar Contraseña</a></li>
+            <li><a href="#">Salir🥺</a></li>
+        </ul>
+    </div>
 
     <div class="ContenidoAlineado">
 
@@ -102,6 +100,12 @@
         <i class="fa-solid fa-hand-holding-dollar" style="color: #2d98a4; font-size: 100px;"></i>
         <h1 class="Titulo2">BENEFICIOS</h1>
 
+    </div>
+
+    <div class="Iframe"><iframe width="100%" height="800" frameborder="0" scrolling="no" marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=-32.890801,%20-68.844844+(Mi%20nombre%20de%20egocios)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe></div>
     </div>
 
 </body>
