--- a/html/registro.html
+++ b/html/registro.html
@@ -5,8 +5,8 @@
     <title>Forma parte de Ciudad U!</title>
     <link rel="stylesheet" href="/css/registrate.css">
     <link rel="stylesheet" href="/css/barranav.css">
-    <script src="/js/registro.js"></script>
-    <Header>
+    <script src="/js/"></script>
+    <header>
         <nav>
             <div class="logo">
               <img width='80' height='70' src='/image/LogoCU.png'>
@@ -93,7 +93,7 @@
 
             <div class="form-group">
                 <label for="EMAIL">Mail:</label>
-                <input type="text" id="mail" name="mail"
+                <input type="text" id="email" name="email"
                     style="border-radius: 10px; padding:10px; width: 943px;margin: 10px;">
             </div>
 
