--- a/html/registro.html
+++ b/html/registro.html
@@ -5,7 +5,7 @@
     <title>Forma parte de Ciudad U!</title>
     <link rel="stylesheet" href="/css/registrate.css">
     <link rel="stylesheet" href="/css/barranav.css">
-    <script src="/js/"></script>
+    <script src="/js/registro.js"></script>
     <header>
         <nav>
             <div class="logo">
