--- a/html/actividaes_u.html
+++ b/html/actividaes_u.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/css/Actividades_U.css">
         <link rel="stylesheet" href="/css/barranav-alter.css">
         <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
+        <title>Actividades</title>
       </head>
 <header>
     <div class="barra_inicio">
