--- a/html/home.html
+++ b/html/home.html
@@ -94,7 +94,7 @@
       </div>
 
       <div class="columna">
-        <a href="#">
+        <a href="/html/revista.html">
           <i class="fa-brands fa-readme  fa-beat"
             style="--fa-animation-duration: 5s; --fa-beat-scale: 1.2 ; font-size: 100px;"></i>
         </a>
@@ -102,7 +102,7 @@
       </div>
 
       <div class="columna">
-        <a href="#">
+        <a href="/html/nosotros_uc.html">
           <i class="fa-regular fa-handshake fa-beat"
             style="--fa-animation-duration: 5s; --fa-beat-scale: 1.2; font-size: 100px;"></i>
         </a>
