--- a/html/comercio.html
+++ b/html/comercio.html
@@ -24,7 +24,9 @@
 
         <li><a href="/html/beneficios_uc.html">Beneficios</a></li>
 
-        <li><a href="/html/comercio.html">Adheri tu Comercio<hr></a></li>
+        <li><a href="/html/comercio.html">Adheri tu Comercio
+            <hr>
+          </a></li>
 
         <li><a href="/html/registro.html">Ùnite</a></li>
 
@@ -108,13 +110,9 @@
     </form>
   </div>
 
-  <div class="Terminos">
-
-    <ul>
-      <input type="checkbox" id="condiciones" name="terminos_condiciones" />
-      <label for="condiciones">Acepto terminos y condiciones</label>
-    </ul>
-
+  <div class="container">
+    <input type="checkbox" id="terms" class="checkbox-input">
+    <label for="terms" class="checkbox-label">Acepto términos y condiciones</label>
   </div>
 
   <button class="Boton" type="submit">Enviar </button>
