--- a/html/home.html
+++ b/html/home.html
@@ -72,7 +72,7 @@
 
           <li>Cursos de Inovación y Tecnología</li>
 
-          <button><a href="#"></a>Unirse Ahora </button>
+          <button><a href="/html/registrate.html">Unirse Ahora </a></button>
         </h2>
       </div>
     </ul>
