--- a/html/registro.html
+++ b/html/registro.html
@@ -118,15 +118,15 @@
             <div class="form-group">
                 <label for="Universidad">Universidad:</label>
                 <select id="Universidad" name="Universidad" style="border-radius: 10px; padding:10px; width: 967px;margin: 10px;">
-                    <option value="femenino">Pre</option>
-                    <option value="masculino">Uncuyo</option>
-                    <option value="otro">Uch</option>
-                    <option value="femenino">Utn</option>
-                    <option value="masculino">Uca</option>
-                    <option value="otro">Um</option>
-                    <option value="femenino">Uda</option>
-                    <option value="masculino">Uc</option>
-                    <option value="otro">UMaza</option>
+                    <option value="preuniversitario">Pre</option>
+                    <option value="Uncuyo">Uncuyo</option>
+                    <option value="Universidad Champagnat">Uch</option>
+                    <option value="Universidad Tecnologíca Nacional">Utn</option>
+                    <option value="Universidad Catolica Argentina">Uca</option>
+                    <option value="Universad de Mendoza">Um</option>
+                    <option value="Universidad de Aconcagua">Uda</option>
+                    <option value="Universidad de Congreso">Uc</option>
+                    <option value="Universidad Maza">UMaza</option>
                 </select>
             </div>
 
