--- a/html/revista.html
+++ b/html/revista.html
@@ -37,9 +37,9 @@
 </head>
 
 <body>
-
+    <div class="cuadro">
     <div class="centered-image">
-        <img src="img/title.PNG" alt="imagen centrada" width="409" height="245">
+        <img src="/image/title2.PNG" alt="imagen centrada" width="609" height="285">
     </div>
 
     <!-- PHOTO SLIDER -->
@@ -78,12 +78,12 @@
     <div class="entretenimiento"> Entretenimiento</div>
 
     <div class="lineuno">
-        <img src="img/blue.PNG" alt="div" WIDTH="130" HEIGHT="6">
+        <img src="/image/blue.PNG" alt="div" WIDTH="130" HEIGHT="6">
     </div>
     <div class="linedos">
-        <img src="img/blue.PNG" alt="div" WIDTH="275" HEIGHT="6">
+        <img src="/image/blue.PNG" alt="div" WIDTH="275" HEIGHT="6">
     </div>
-    
+    </div>
 </body>
 
 </html>
